other-vpol/check-nvidia-gpu/.chainsaw-test/podcontrollers-good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeployment01
  namespace: nvidia-gpu-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - image: ghcr.io/kyverno/test-busybox:1.35
        name: busybox02
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
  namespace: nvidia-gpu-ns
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          containers:
          - image: ghcr.io/kyverno/test-busybox:1.35
            name: busybox
          restartPolicy: OnFailure
