other-vpol/check-nvidia-gpu/.chainsaw-test/pods-good.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: cuda
  name: goodpod01
  namespace: nvidia-gpu-ns
spec:
  containers:
    - name: cuda
      image: nvidia/cuda:12.2.0-devel-ubi8
      command: ["nvidia-smi"]
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: busybox
  name: goodpod02
  namespace: nvidia-gpu-ns
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
      resources:
        limits:
          memory: "256Mi"
          cpu: "0.5"
