other-vpol/check-nvidia-gpu/check-nvidia-gpu.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: check-nvidia-gpus
  annotations:
    policies.kyverno.io/title: Check NVIDIA GPUs
    policies.kyverno.io/category: Other
    policies.kyverno.io/severity: medium
    kyverno.io/kyverno-version: 1.15.0
    policies.kyverno.io/minversion: 1.19.1
    kyverno.io/kubernetes-version: "1.30"
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Containers which request use of an NVIDIA GPU often need to
      be authored to consume them via a CUDA environment variable called
      NVIDIA_VISIBLE_DEVICES. This policy checks the containers which
      request a GPU to ensure they have been authored with this environment
      variable.
spec:
  validationActions:
    - Warn
    - Audit
  variables:
    - name: allContainers
      expression: object.spec.containers + object.spec.?initContainers.orValue([]) + object.spec.?ephemeralContainers.orValue([])
  matchConstraints:
    resourceRules:
      - resources:
          - pods
        operations:
          - CREATE
          - UPDATE
        apiGroups:
          - ""
        apiVersions:
          - v1
  validations:
    - message: "Images which reserve NVIDIA GPUs must be built to use them."
      expression: >
        variables.allContainers.all(container,
          container.image in exceptions.allowedValues ||
          !container.?resources.?limits[?'nvidia.com/gpu'].hasValue() ||
          (
            container.resources.limits['nvidia.com/gpu'] > 0
            &&
            image.GetMetadata(container.image)
            .config.?Env.orValue([])
            .exists(envVar, envVar.startsWith('NVIDIA_VISIBLE_DEVICES='))
          )
        )
