other-vpol/check-nvidia-gpu/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: check-nvidia-gpu
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../check-nvidia-gpu.yaml
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1
          kind: ValidatingPolicy
          metadata:
            name: check-nvidia-gpus
          spec:
            validationActions:
             - Deny
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: ns.yaml
    - apply:
        file: pods-good.yaml
    - apply:
        expect:
        - check:
            (contains($error, 'Images which reserve NVIDIA GPUs must be built to use them')): true
        file: pods-bad.yaml
    - apply:
        file: podcontrollers-good.yaml
    - apply:
        expect:
        - check:
            (contains($error, 'Images which reserve NVIDIA GPUs must be built to use them')): true
        file: podcontrollers-bad.yaml
  - name: step-99
    try:
    - script:
        content: kubectl delete all --all --force --grace-period=0 -n nvidia-gpu-ns
